# tiny

./: .env.example  .gitignore  CLAUDE.md  README.md  feature.txt  pyproject.toml
src/tiny/: __init__.py  cli.py  config.py  logging.py
src/tiny/ai/: __init__.py  llm_client.py  post_processor.py  prompts.py  prompts.txt  vertex_client.py
src/tiny/git/: __init__.py  operations.py
src/tiny/processors/: __init__.py  blog_generator.py  note_parser.py  note_reader.py  post_writer.py
src/tiny/website/: __init__.py  file_manager.py  index_updater.py
tests/: conftest.py  test_cli.py  test_llm_client.py  test_note_reader.py  test_post_processor.py  test_post_writer.py
