[project]
name = "tiny"
version = "0.1.0"
description = "AI agent to convert daily notes into blog posts"
readme = "README.md"
authors = [
    { name = "Priyanshu Jain", email = "priyanshu@priyanshujain.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm",
    "click",
    "pydantic",
    "pydantic-settings",
    "gitpython",
    "rich",
    "python-dotenv",
    "pyyaml",
]

[project.scripts]
tiny = "tiny.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

